[gd_scene load_steps=4 format=3 uid="uid://bdbdlenn16ob0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_script"]
[ext_resource type="Shader" path="res://shaders/magical_background.gdshader" id="2_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("2_shader")
shader_parameter/bg_color = Color(0.05, 0.05, 0.15, 1)
shader_parameter/fog_color = Color(0.2, 0.1, 0.35, 1)
shader_parameter/speed = 0.2

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 64
text = "RUNE LABORATORY"
horizontal_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SaveContainer" type="CenterContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SaveContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SubtitleLabel" type="Label" parent="SaveContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 32
text = "CHOOSE YOUR DESTINY"
horizontal_alignment = 1

[node name="SavesHBox" type="HBoxContainer" parent="SaveContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="BackButton" type="Button" parent="SaveContainer/VBoxContainer"]
layout_mode = 2
text = "BACK TO TITLE"

[node name="NameEntryContainer" type="CenterContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NameEntryContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="InstructionLabel" type="Label" parent="NameEntryContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 40
text = "INSCRIBE YOUR NAME"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="NameEntryContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter wizard name..."
alignment = 1

[node name="ConfirmButton" type="Button" parent="NameEntryContainer/VBoxContainer"]
layout_mode = 2
text = "CONFIRM RITUAL"